[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "your project description"
authors = ["Authors"]

[tool.poetry.dependencies]
python = ">=3.9"
pyjwt = "^2.7.0"
dash = "^2.11.1"
dash-bootstrap-components = "^1.4.2"
dash-mantine-components = "^0.12.1"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "22.1.0"
isort = "5.12.0"
click = "8.0.3"
pre-commit = "2.17.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
