[tool.poetry]
name = "quant"
version = "0.1.0"
description = ""
authors = ["WOOSHIK-M <wooshik.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
streamlit-option-menu = "^0.3.6"
jwt = "^1.3.1"
plotly = "^5.18.0"
watchdog = "^3.0.0"
black = "^23.12.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
